fixing the last item at the end and set the header as fixed at top

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -3,45 +3,77 @@
 {% block content %}
 
 <div>
-    <div class="dashboard-container row align-items-start justify-content-start sortable">
+    <div class="dashboard-container row align-items-start justify-content-start">
        
+        <div id="parent-container" class="row align-items-start justify-content-start" >
 
-          <div class="list-board-container">
-            <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                <span>AAA</span>
+            <div class="list-board-container">
+                <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                    <span>AAA</span>
+                </div>
+                
+                <div class="list-items-board flex-row align-items-center justify-content-center">
+                    <div class="item-board">Carlos</div>
+                    <div class="item-board">Vieira</div>
+                    <div class="item-board">Antonmo</div>
+                    <div class="item-board">fiSH</div>
+                </div>
             </div>
+
+            <div class="list-board-container">
+                <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                    <span>BBB</span>
+                </div>
+                
+                <div class="list-items-board flex-row align-items-center justify-content-center">
+                    <div class="item-board">Rodolfo</div>
+                    <div class="item-board">Pam</div>
+                </div>
+            </div>
+
+            <div class="list-board-container">
+                <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                    <span>CCC</span>
+                </div>
+                
+                <div class="list-items-board flex-row align-items-center justify-content-center">
+                    <div class="item-board">MIcha</div>
+                    <div class="item-board">LOAS</div>
+                    <div class="item-board">OFius</div>
+                </div>
+            </div> 
             
-            <div class="list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board">Carlos</div>
-                <div class="item-board">Vieira</div>
-                <div class="item-board">Antonmo</div>
-                <div class="item-board">fiSH</div>
+            <div class="list-board-container">
+                <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                    <span>CCC</span>
+                </div>
+                
+                <div class="list-items-board flex-row align-items-center justify-content-center">
+                    <div class="item-board">MIcha</div>
+                    <div class="item-board">LOAS</div>
+                    <div class="item-board">OFius</div>
+                </div>
+            </div>   
+
+            <div class="list-board-container">
+                <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                    <span>CCC</span>
+                </div>
+                
+                <div class="list-items-board flex-row align-items-center justify-content-center">
+                    <div class="item-board">MIcha</div>
+                    <div class="item-board">LOAS</div>
+                    <div class="item-board">OFius</div>
+                </div>
+            </div>   
+            
+            <div class="list-board-plus">
+                <div class="d-flex align-items-center justify-content-center">
+                    <span>+</span>
+                </div>
             </div>
+
         </div>
-
-        <div class="list-board-container">
-            <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                <span>BBB</span>
-            </div>
-            
-            <div class="list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board">Rodolfo</div>
-                <div class="item-board">Pam</div>
-            </div>
-        </div>
-
-        <div class="list-board-container">
-            <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                <span>CCC</span>
-            </div>
-            
-            <div class="list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board">MIcha</div>
-                <div class="item-board">LOAS</div>
-                <div class="item-board">OFius</div>
-            </div>
-        </div>                  
-          
 
     </div>
     
