--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -1,7 +1,20 @@
 .dashboard-container{
+    margin-top: 80px;
     color: wheat;
     padding-left: 30px;
+    position: relative;
 }   
+
+/* #container-parent{
+    background-color: aquamarine;
+} */
+
+#parent-container{
+    position: relative;
+    /* background-color: beige; */
+    width: auto;
+}
+
 
 .list-board-container{ 
     margin: 15px;
@@ -17,7 +30,9 @@
     /* overflow: hidden; */
 }
 
-.list-board-plus{    
+.list-board-plus{
+    position: absolute;    
+    right: -315px;
     margin: 15px;
     width: 300px;
     /* height: 75vh; */
