Modal configuration for both newBoard and newList

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -22,7 +22,7 @@
  
                       
             
-            <div class="list-board-plus" onclick="openModal()">
+            <div class="list-board-plus" onclick="createNewBoard()">
                 <div class="d-flex align-items-center justify-content-center">
                     <span>+</span>
                 </div>
