--- a/templates/main.html
+++ b/templates/main.html
@@ -11,22 +11,69 @@
     <link rel="stylesheet" href="{% static 'styles/header.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/side-menu.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/dashboard.css' %}" />
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
+      var inputModalContent = ""
+
       /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
       function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("sidenav").style.width = "250px";
         document.getElementById("main").style.marginLeft = "250px";
       }
 
       /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
       function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("sidenav").style.width = "0";
         document.getElementById("main").style.marginLeft = "0";
       }
 
-      function openModal(){
-        alert('Hi')
+      /**
+       * Opens modal
+       * */
+      function openModal(message, smallMessage){                          
+        $('#modal').modal('show');       
+      }
+
+      /**
+       * Close modal
+       * */
+      function closeModal(){
+        $('#modal').modal('hide');      
+      }
+
+
+      /* configuring the modal for board creation */
+      function createNewBoard(){
+        document.getElementById("exampleModalLabel").textContent="Board Name"             
+        document.getElementById("modalSmallMessage").textContent="Name the new board"  
+        openModal();        
+      }
+
+      function saveNewBoard(){
+        saveModalContent()
+        const newBoard = inputModalContent // using the content from the modal
+      }
+
+      /* reseting the modal and saving the new board */
+      function saveModalContent(){
+        closeModal();
+        document.getElementById("exampleModalLabel").textContent=""
+        document.getElementById("modalSmallMessage").textContent=""
+        inputModalContent = document.getElementById("modalInput").value;
+        console.log(inputModalContent)
+        document.getElementById("modalInput").value="";
+      }
+
+      function createNewList(){
+        document.getElementById("exampleModalLabel").textContent="List Name"             
+        document.getElementById("modalSmallMessage").textContent="Name the new List"
+        openModal();
+
+      }
+
+      function saveNewList(){
+        saveModalContent()
+        const newList = inputModalContent // using the content from the modal
       }
 
       
@@ -37,27 +84,28 @@
   <body>
 
     <!-- Side bar menu -->
-    <div id="mySidenav" class="sidenav">
+    <div id="sidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">Criar quadro</a>
+      <a href="#" onclick="createNewList()">Criar quadro</a>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+            <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close" onclick="closeModal()">
+              <!-- <span aria-hidden="true">&times;</span> -->
             </button>
           </div>
           <div class="modal-body">
-            ...
+            <small id="modalSmallMessage" class="form-text text-muted">Small message</small>
+            <input type="text" class="form-control" id="modalInput" placeholder="Ex: Testing" >
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="closeModal()">Close</button>
+            <button type="button" class="btn btn-primary" onclick="saveNewBoard()">Save changes</button>
           </div>
         </div>
       </div>
@@ -88,7 +136,6 @@
     
       // var listBoardContainer = document.getElementsByClassName('dashboard-container');  // getting THE list container
       var listBoardContainer = document.getElementsByClassName('dashboard-container')[0].firstElementChild;  // getting THE list container
-      console.log(listBoardContainer)
       const sortContainer = Sortable.create(listBoardContainer, { 
             animation: 150,
             group: 'shared-boards',
