--- a/templates/header.html
+++ b/templates/header.html
@@ -1,12 +1,12 @@
 <header >        
     <div class="row header align-items-center header-container">
         <div class="col-lg-1  col-md-1   col-sm-1 text-nowrap menu-button-container">
-            <div class="menu-button d-flex justify-content-center align-items-center" onclick="openNav()">
+            <!-- <div class="menu-button d-flex justify-content-center align-items-center" onclick="openNav()">
                 
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                     </svg>
-            </div>
+            </div> -->
         </div>
 
         <div class="col-lg-5 offset-lg-1      col-md-6 offset-md-1        col-sm-6 offset-sm-1    text-nowrap title-div">
