--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -28,6 +28,7 @@
                 <div class="list-items-board flex-row align-items-center justify-content-center">
                     <div class="list-items-board-child">
                         <div class="item-board simple-item d-flex align-items-center">Build</div>
+                        <div class="item-board simple-item d-flex align-items-center">Build format it copy delete burn paste</div>
                         
                     </div>
 
