--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Page Title</title>
-</head>
-<body>
-	<!-- Your page content goes here -->
+{% extends 'main.html' %}
+
+{% block content %}
+	<section class="vh-100">
+		<div class="mask d-flex align-items-center h-100  div-container">
+			<div class="container h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col-12 col-md-9 col-lg-7 col-xl-6">
+				<div class="card reg-card" style="border-radius: 15px;">
+					<div class="card-body p-5">
+					<h2 class="text-uppercase text-center register-title mb-4">Create an account</h2>
+
+					<form>
+
+						<div class="form-outline mb-3">
+						<input type="text" id="form3Example1cg" class="form-control form-control-sm" />
+						<label class="form-label" for="form3Example1cg">Your Name</label>
+						</div>
+
+						<div class="form-outline mb-3">
+						<input type="email" id="form3Example3cg" class="form-control form-control-sm" />
+						<label class="form-label" for="form3Example3cg">Your Email</label>
+						</div>
+
+						<div class="form-outline mb-3">
+						<input type="password" id="form3Example4cg" class="form-control form-control-sm" />
+						<label class="form-label" for="form3Example4cg">Password</label>
+						</div>
+
+						<div class="form-outline mb-3">
+						<input type="password" id="form3Example4cdg" class="form-control form-control-sm" />
+						<label class="form-label" for="form3Example4cdg">Repeat your password</label>
+						</div>
+
+
+						<div class="d-flex justify-content-center">
+						<button type="button"
+							class="btn btn-success btn-block btn-md gradient-custom-4 text-body">Register</button>
+						</div>
+
+						<p class="text-center text-muted mt-3 mb-0">Have already an account? <a href="#!"
+							class="fw-bold text-body"><u>Login here</u></a></p>
+
+					</form>
+
+					</div>
+				</div>
+				</div>
+			</div>
+			</div>
+		</div>
+</section>
 </body>
 </html>
+
+{% endblock content %}
