--- a/templates/header.html
+++ b/templates/header.html
@@ -9,15 +9,25 @@
             </div> -->
         </div>
 
-        <div class="col-lg-5 offset-lg-1      col-md-6 offset-md-1        col-sm-6 offset-sm-1    text-nowrap title-div">
+        <div class="col-lg-4 offset-lg-1      col-md-6 offset-md-1        col-sm-6 offset-sm-1    text-nowrap title-div">
             <div><h2 class="text-truncate">KanDo - kanban managment</h2></div>
         </div>
 
         
-        <div class="col-lg-1 offset-lg-3      col-md-2 offset-md-2        col-sm-2 offset-sm-1 text-nowrap">
-            <div class="d-flex justify-content-center align-items-center header-login-button-container">
-                <div class="text-center"><span>Login</span></div>
-            </div>
+        <div class="col-lg-1 offset-lg-3      col-md-2 offset-md-0        col-sm-2 offset-sm-0 text-nowrap">
+            <a href="{% url 'register'%}" style="text-decoration: none;  color: inherit;">
+                <div class="d-flex justify-content-center align-items-center header-login-button-container">
+                    <div class="text-center"><span>Register</span></div>
+                </div>
+            </a>            
+        </div>
+
+        <div class="col-lg-1 offset-lg-0      col-md-1 offset-md-0       col-sm-2 offset-sm-0 text-nowrap">
+            <a  style="text-decoration: none;  color: inherit;">
+                <div class="d-flex justify-content-center align-items-center header-login-button-container">
+                    <div class="text-center"><span>Login</span></div>
+                </div>
+            </a>            
         </div>
     </div>
 </header>
