--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -11,15 +11,27 @@
 					<h2 class="text-uppercase text-center register-title mb-4">Create an account</h2>
 
 					<form>
-
+						{% csrf_token %}
+						
 						<div class="form-outline mb-3">
-						<input type="text" id="form3Example1cg" class="form-control form-control-sm" />
-						<label class="form-label" for="form3Example1cg">Your Name</label>
+						<input type="{{ form.name.field.widget.input_type }}" 
+							name="{{ form.name.name }}"
+							id="{{ form.name.id_for_label }}"
+							value="{{ form.name.value }}"
+							class="form-control form-control-sm"
+							{% if form.name.required %}required{% endif %} />
+						<label class="form-label" for="{{ form.name.id_for_label }}">Your Name</label>
 						</div>
 
 						<div class="form-outline mb-3">
-						<input type="email" id="form3Example3cg" class="form-control form-control-sm" />
-						<label class="form-label" for="form3Example3cg">Your Email</label>
+						<input type="{{ form.email.field.widget.input_type }}"
+							name="{{ form.email.name }}"
+							id="{{ form.email.id_for_label }}"
+							value="{{ form.email.value }}"
+							{% if form.email.required %}required{% endif %}
+							
+							id="email" class="form-control form-control-sm" />
+						<label class="form-label" >Your Email</label>
 						</div>
 
 						<div class="form-outline mb-3">
