--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -15,9 +15,8 @@
 						
 						<div class="form-outline mb-3">
 							<input 
-								type="{{ form.name.field.widget.input_type }}" 
-								name="{{ form.name.name }}"
-								{% if form.name.value %} value="{{ form.name.value }}" {% endif %}							
+								type="text" 
+								name="name"
 								{% if form.name.required %} required {% endif %} 
 								
 								class="form-control form-control-sm"
@@ -25,36 +24,35 @@
 
 								
 
-							<label class="form-label" for="{{ form.name.id_for_label }}">Your Name</label>
+							<label class="form-label" for="name">Your Name</label>
 						</div>
 
 						<div class="form-outline mb-3">
 							<input 
-								type="{{ form.email.field.widget.input_type }}"
-								name="{{ form.email.name }}"
-								{% if form.email.value %} value="{{ form.email.value }}" {% endif %}
+								type="email"
+								name="email"
 								{% if form.email.required %}required{% endif %}
 								
 								id="email" class="form-control form-control-sm" />							
-							<label class="form-label">Your Email</label>
+							<label class="form-label" for="email">Your Email</label>
 						</div>
 
 						<div class="form-outline mb-3">
 							<input 
-								type="{{ form.password1.field.widget.input_type }}"
-								name="{{ form.password1.name }}"
+								type="password"
+								name="password1"
 								class="form-control form-control-sm" />
 
-							<label class="form-label" >Password</label>
+							<label class="form-label" for="password1">Password</label>
 						</div>
 
 						<div class="form-outline mb-3">
 							<input 
-								type="{{ form.password2.field.widget.input_type }}"
-								name="{{ form.password2.name }}"
+							type="password"
+							name="password2"
 								
 								class="form-control form-control-sm" />
-							<label class="form-label" >Repeat your password</label>
+							<label class="form-label" for="password2">Repeat your password</label>
 						</div>
 
 
