--- a/templates/main.html
+++ b/templates/main.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'styles/side-menu.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/dashboard.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/register.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles/toast.css' %}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" ></script>
     <script>
       
@@ -158,7 +159,7 @@
         itemParent.append(itemClone);
       
       }
-    
+      $('.toast').toast({delay: 600})
     </script>
     
   </head>
@@ -193,9 +194,12 @@
       </div>
     </div>
 
+ 
+
 
     <div class="container-fluid">
       {% include 'header.html' %}
+      {% include 'toast.html' %}
 
       {% block content %}
 
