--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 	<section class="vh-100">
+		
 		<div class="mask d-flex align-items-center h-100  div-container">
 			<div class="container h-100">
 			<div class="row d-flex justify-content-center align-items-center h-100">
@@ -9,6 +10,18 @@
 				<div class="card reg-card" style="border-radius: 15px;">
 					<div class="card-body p-5">
 					<h2 class="text-uppercase text-center register-title mb-4">Create an account</h2>
+					
+					{% if messages %}
+					<ul class="messages">
+						{% for message in messages %}
+						<!-- <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li> -->
+						<!-- {% include 'toast.html' %} -->
+						<script>
+							document.getElementById("toast").style.display = 'block'
+						</script>
+						{% endfor %}
+					</ul>
+					{% endif %}
 
 					<form method="POST">
 						{% csrf_token %}
