--- a/templates/main.html
+++ b/templates/main.html
@@ -169,10 +169,11 @@
   <body>
 
     <!-- Side bar menu -->
-    <!-- <div id="sidenav" class="sidenav">
+    
+    <div id="sidenav" class="sidenav" >
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#" onclick="createNewList()">Criar quadro</a>
-    </div> -->
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
