--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h1 style="color: whitesmoke; margin-top: 300px;">Registrado</h1>
+<h1 style="color: whitesmoke; margin-top: 300px;">Registrado {{user.name}}</h1>
 {% endblock content %}
