adding new project

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -3,6 +3,8 @@
 {% block content %}
 
 <div>
+    <div class="container-title-user-dashboard" style="border-bottom: none;">
+    </div>
     <div class="dashboard-container  align-items-start justify-content-start">
        
         <div id="parent-container" class="row align-items-start justify-content-start" >
